Add an announcement for Dune 3.11.1 (#1683)
Co-authored-by: Etienne Millon <me@emillon.org>
Co-authored-by: Christine Rose <christinerose@users.noreply.github.com>

--- a/data/changelog/dune/2023-10-09-dune-3.11.1.md
+++ b/data/changelog/dune/2023-10-09-dune-3.11.1.md
@@ -3,10 +3,17 @@ title: Dune 3.11.1
 date: "2023-10-09"
 tags: [dune, platform, release]
 changelog: |
-
-  # Fixed
+  ## Fixed
 
   - Fix `dune rpc` commands on Windows (#8806, fixes #8799, @nojb)
 
   - Fix `inline_tests` when the partition list is empty (#8849, fixes #8848, @hhugo)
 ---
+
+Following the release of Dune 3.11.0 a few days ago, we've just released version
+3.11.1 with a couple of bug fixes:
+
+- Fix the `dune rpc status` command that was incorrectly showing that there were
+  no RPC servers running on Windows.
+- Fix a bogus error when no inline test was declared in a library using
+  `(inline_tests)`.
