Added a short description to all exercises (#1681)

--- a/data/exercises/032_gcd.md
+++ b/data/exercises/032_gcd.md
@@ -3,6 +3,7 @@ title: Determine the Greatest Common Divisor of Two Positive Integer Numbers
 number: "32"
 difficulty: intermediate
 tags: [ "arithmetic" ]
+description: "Find the greatest common divisor of two positive integers using Euclid's algorithm."
 ---
 
 # Solution
