--- a/data/exercises/057_bst.md
+++ b/data/exercises/057_bst.md
@@ -3,6 +3,7 @@ title: Binary Search Trees (Dictionaries)
 number: "57"
 difficulty: intermediate
 tags: [ "binary-tree" ]
+description: "Construct a binary search tree from a list of integers and use it to test if a tree is symmetric."
 ---
 
 ```ocaml
